--- a/apps/frontend/src/components/Navigation/MainMenu/stylePrivateGame.css
+++ b/apps/frontend/src/components/Navigation/MainMenu/stylePrivateGame.css
@@ -1,24 +1,25 @@
-.Matchmaking {
+.PrivateLobby {
   background-color: var(--background-color);
   height: calc(100vh - 100px);
   width: 100%;
   overflow-x: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 }
 
-.Matchmaking>div {
+.PrivateLobby>div {
   width: 1200px;
   max-height: 790px;
-  height: 100%;
+  margin-top: 50px;
+  height: auto;
   background-color: var(--background-color);
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
 }
 
-.Matchmaking .left-container {
+.PrivateLobby .left-container {
   display: block;
   min-width: 400px;
   width: auto;
@@ -29,19 +30,19 @@
   position: relative;
 }
 
-.Matchmaking .right-container {
+.PrivateLobby .right-container {
   width: 410px;
   height: 90%;
   position: relative;
   float: right;
 }
 
-.Matchmaking .cta-box {
+.PrivateLobby .cta-box {
   margin-top: 12px;
   margin-bottom: 12px;
 }
 
-.Matchmaking .cta-box::before {
+.PrivateLobby .cta-box::before {
   content: '';
   display: block;
   background-color: rgba(0, 125, 240, 0.54);;
@@ -61,7 +62,7 @@
 }
 
 
-.Matchmaking .right-container>div:first-of-type {
+.PrivateLobby .right-container>div:first-of-type {
   width: 100%;
   height: 100%;
   background-color: #42C2C8;
@@ -75,19 +76,19 @@
 }
 
 
-.Matchmaking .right-container img {
+.PrivateLobby .right-container img {
   width: 365px;
   height: auto;
   object-fit: initial;
 }
 
-.Matchmaking .elo-container {
+.PrivateLobby .elo-container {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.Matchmaking .elo-container span {
+.PrivateLobby .elo-container span {
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
@@ -95,18 +96,18 @@
   color: var(--font-color);
 }
 
-.Matchmaking .format-container svg path{
+.PrivateLobby .format-container svg path{
   fill: var(--font-color);
 }
 
-.Matchmaking .elo-container>div {
+.PrivateLobby .elo-container>div {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-left: 15px;
 }
 
-.Matchmaking .elo-container>div span {
+.PrivateLobby .elo-container>div span {
   margin-left: 5px;
 }
 
@@ -271,25 +272,76 @@ input:checked+.slider .checked-icon {
   cursor: pointer;
 }
 
+.PrivateLobby .Lobby{
+  display: flex;
+  flex-direction: column;
+}
+
+.PrivateLobby .Lobby h3{
+  font-size: 28px;
+  font-weight: bold;
+  color: var(--font-color);
+  margin-bottom: 13px;
+}
+
+.PrivateLobby .Lobby > div{
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.PrivateLobby .Lobby > div span{
+  font-size: 22px;
+  font-weight: normal;
+}
+
+.PrivateLobby .Lobby > div span:first-of-type{
+  color: var(--font-color);
+}
+
+.PrivateLobby .Lobby > div .ready{
+  color: #4CAF50;
+  font-weight: bold;
+  margin-left: 15px;
+}
+
+
+.PrivateLobby .Lobby > div > svg 
+{
+  margin-right: 5px;
+}
+
+.PrivateLobby .Lobby > div > svg path{
+  fill: var(--font-color);
+}
+
+.PrivateLobby .Lobby > div .notready{
+  color: #E63946;
+  font-weight: bold;
+  margin-left: 15px;
+}
+
 @media (max-width: 1200px) {
-  .Matchmaking>div {
+  .PrivateLobby>div {
     width: 95%;
   }
 }
 
 @media (max-width: 900px) {
-  .Matchmaking .right-container {
+  .PrivateLobby .right-container {
     display: none;
   }
 
-  .Matchmaking>div {
+  .PrivateLobby>div {
     justify-content: center;
     align-items: center;
   }
 }
 
 @media (max-width: 450px) {
-  .Matchmaking .left-container {
+  .PrivateLobby .left-container {
     width: 100%;
     min-width: 100%;
     padding-left: 0;
