--- a/apps/frontend/src/components/ChessGame/PopUpDraw.css
+++ b/apps/frontend/src/components/ChessGame/PopUpDraw.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   box-shadow: 4px 4px 0px #212121;
   animation: slideInFromLeft 0.7s ease-out;
+  z-index: 100;
 }
 
 .PopUpDraw span{
