--- a/apps/frontend/src/components/Profil/PopupModifProfil.css
+++ b/apps/frontend/src/components/Profil/PopupModifProfil.css
@@ -128,6 +128,26 @@
   background-color: #fff;
 }
 
+.PopupModifProfil > div:last-of-type > div:first-of-type > div:last-of-type {
+  display: flex;
+  flex-direction: column;
+}
+
+.PopupModifProfil > div:last-of-type > div:first-of-type > div:last-of-type > span{
+  margin-top: 25px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.PopupModifProfil .error{
+  color: #E63946;
+}
+
+.PopupModifProfil .success{
+  color: #47E639;
+}
+
+
 .closePopup{
   position: absolute;
   top: 15px;
