--- a/apps/frontend/src/components/ChessGame/ChessGameEndPopup.css
+++ b/apps/frontend/src/components/ChessGame/ChessGameEndPopup.css
@@ -23,7 +23,7 @@
   transform: translate(-50%, -50%);
   width: 500px;
   height: 500px;
-  background-color: #fff;
+  background-color: var(--background-color);
   border-radius: 11px;
   border: solid 2px var(--font-color);
   display: flex;
@@ -110,7 +110,7 @@
   width: 250px;
   height: 50px;
   border-radius: 11px;
-  box-shadow: 4px 4px 0px var(--font-color);
+  box-shadow: 4px 4px 0px var(--drop-shadow);
   font-size: 22px;
   font-weight: bold;
   cursor: pointer;
@@ -125,7 +125,7 @@
 }
 
 .PopUpFinDePartie > div:last-of-type > div > button:nth-of-type(2){
-  background-color: #fff;
+  background-color: var(--secondbackground);
   color: var(--font-color);
   border: 2px solid var(--font-color);
 }
@@ -134,7 +134,7 @@
   width: 250px;
   height: auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
   justify-content: space-around;
   align-items: start;
   margin-top: 12px;
@@ -147,7 +147,7 @@
 }
 
 .PopUpFinDePartie .partage>div {
-  width: 250px;
+  width: 350px !important;
   height: auto;
   position: relative;
   margin-top: 5px;
@@ -156,15 +156,15 @@
 .PopUpFinDePartie .partage input {
   height: 35px;
   width: 100%;
-  border: solid 2px var(--font-color);
-  color: var(--font-color);
+  border: solid 2px #212121;
+  color: #212121;
   font-size: 16px;
 }
 
 .PopUpFinDePartie .partage button {
   height: 35px;
   width: 35px;
-  background-color: var(--font-color);
+  background-color: #212121;
   border: none;
   cursor: pointer;
   position: absolute;
@@ -174,10 +174,9 @@
 
 .PopUpFinDePartie .partage>div span {
   display: none;
-  color: #fff;
+  color: #212121;
   font-weight: normal;
   font-size: 14px;
-  background-color: var(--font-color);
   border-radius: 5px;
   padding: 2px 5px;
   position: absolute;
