--- a/apps/frontend/src/components/ChessGame/ChatStyle.css
+++ b/apps/frontend/src/components/ChessGame/ChatStyle.css
@@ -17,6 +17,21 @@
   justify-content: flex-end;
 }
 
+.chatContainer .messageContainer > div{
+  width: 100%;
+  height: auto;
+}
+
+.chatContainer .messageContainer p {
+  font-size: 20px;
+  word-wrap: break-word;
+  color: var(--font-color);
+  margin-left: 5px;
+  margin-top: 0px;
+  max-width: 100%;
+  height: auto;
+}
+
 .chatContainer .sendMessage {
   width: 100%;
   height: 30px;
